--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: left;
-    margin-bottom: 10px;
+    margin-bottom: -10px;
     flex-shrink: 0;
 }
 .header h1 {
@@ -44,16 +44,17 @@ body {
     margin-right: 10px;
 }
 .header input {
-    padding: 8px;
+    padding: 2px;
     border: 1px solid #ddd;
     border-radius: 6px;
-    font-size: 1rem;
-    width: 150px;
+    font-size: 0.8rem;
+    width: 100px;
 }
 .address, .phone {
     text-align: left;
     font-size: 1rem;
     color: #555;
+    margin-top: -5px;
     margin-bottom: 5px;
     flex-shrink: 0;
 }
@@ -119,6 +120,7 @@ body {
 .approval {
     font-size: 0.9rem;
     color: #555;
+    margin-top: 70px;
     margin-bottom: 5px;
     flex-shrink: 0;
 }
